...
) {
    val context = LocalContext.current

    Card(
        onClick = { onCatClicked.invoke(cat.id) },
        colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.surfaceContainer),
        modifier = Modifier.semantics { contentDescription = "CardView" }
    ) {
        Row(
            modifier = modifier
                .height(120.dp)
                .padding(horizontal = 16.dp, vertical = 8.dp)
        ) {
...
